# website-screenner

./: .editorconfig  .gitignore  LICENSE.md  README.md  pyproject.toml  results.docx
src/: files_interactions.py  get_url.py  main.py  screenshots.py  urls.py  user_interface.py
src/app/: driver_builder.py  screenshots.py
src/app/page/: __init__.py  cursor_moves.py  page_driver.py  tabs.py
src/app/page/loading/: __init__.py  primary.py  render.py
src/app/page/screen/: buttons.py  scroll.py  sizes.py
src/constants/: __init__.py  files.py  wb_page.py
src/decorators/: __init__.py  create_delay.py  delayed.py
src/files_managers/: __init__.py  docx_manager.py  files_manager.py
