[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.25.0"
pyautogui = "^0.9.54"
imagehash = "^4.3.1"
python-docx = "^1.1.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
skip-string-normalization = true
